<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">J_weaver_MappingPhotos_labFive</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_current_location">Add Current Location</string>
    <string name="mapForm">Add Locations</string>
    <string name="title">Location Title</string>
    <string name="image">Add Image:</string>
    <string name="extraInfo">Extra Information</string>
    <string name="camera">Take Photo</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="title_activity_details_">Details_Activity</string>
    <string name="action_delete">Delete</string>

</resources>
